Fix chart range switch on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10452,9 +10452,9 @@ h3 {
 [name=range-switch] button {
   color: #4e5862;
   border: 0;
-  border-radius: 20px;
-  width: 40px;
-  height: 40px;
+  border-radius: 24px;
+  width: 48px;
+  height: 48px;
   transition: 0.2s;
   background: transparent;
 }
